# RAG-pipeline

./: .env  .gitignore  README.md  env.copy  mlflow.db  pyproject.toml  requirements.txt
.deepeval/: .deepeval_telemetry.txt
archive_data/: endpoints_notuse.py
mlflow_artifacts/: ws_resp_1783435298.json  ws_resp_1783435343.json
mlruns/0/: meta.yaml
mlruns/0/fadc3a83ba384576bd867dddd58d6262/: meta.yaml
mlruns/481713747808780170/: meta.yaml
mlruns/481713747808780170/01bbe2fa45044822b1e8846e6236c37a/: meta.yaml
mlruns/481713747808780170/116e27791d1249b28524f06d00016eef/: meta.yaml
mlruns/481713747808780170/3f9622f927a14183990928e77a00472c/: meta.yaml
mlruns/481713747808780170/45b60ea7994b429da1bdf8c950732df2/: meta.yaml
mlruns/481713747808780170/6e29b09b85794f6a964d5aed036ffcd8/: meta.yaml
mlruns/481713747808780170/70311945937c45f19f93bba356cc3947/: meta.yaml
mlruns/481713747808780170/842fcf954fe24a15831ff19348793196/: meta.yaml
mlruns/481713747808780170/8c3c6aabb6564e85b4d64692524793af/: meta.yaml
mlruns/481713747808780170/9b1228b83ae74cccad93199a2664a9e2/: meta.yaml
mlruns/481713747808780170/a813e3db29f145658ed942d5dd7a971f/: meta.yaml
src/: chunking.py  config.py  embedding_model.py  llm_client.py  logging_config.py  main.py  prompt.py  retriever.py  retriver.py  vectorstore.py
src/api/: endpoints.py
src/archive/: vectorstore.py
src/pipeline/: rag_pipeline.py
src/rag_pipeline_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ui/: index.html
test/: rag_eval_deepeval.py  test.py
(+27 files in other folders)
