[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-pipeline-project"
version = "0.1.0"
description = "Python RAG application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.138.0",
    "langchain==1.3.11",
    "langchain-chroma==1.1.0",
    "langchain-community==0.4.2",
    "langchain-core==1.4.8",
    "langchain-ollama==1.1.0",
    "langchain-openai==1.3.3",
    "langchain-qdrant==1.1.0",
    "langchain-classic==1.0.8",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv==1.2.2",
    "qdrant-client==1.18.0",
    "jinja2==3.1.6",
    "faiss-cpu==1.14.3",
    "pypdf==6.14.2",
    "deepeval==4.0.7",
    "plotly==6.8.0",
    "mlflow==3.14.0",
    
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]